<?xml version="1.0" encoding="utf-8"?><!--
/*
**
** Copyright 2008, The Android Open Source Project
** Copyright (C) 2017 Djalel Chefrour
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for Quran keyboard  -->
    <string name="ime_name">لوح مفاتيح القرآن الكريم</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">.،؛:!؟\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>

    <!-- Labels on soft keys -->
    <string name="label_go_key">اذهب</string>
    <string name="label_next_key">تالي</string>
    <string name="label_send_key">أرسل</string>

    <string name="label_symbol_key">123</string>
    <string name="label_letters_key">أ\ufe8fج</string>

    <!-- Options menu -->
    <!--<string name="ime_settings">إعدادات لوح مفاتيح القرآن الكريم</string>-->
    <string name="change_ime">تغيير طريقة الإدخال</string>

    <!-- Titles for ImePrefsActivity -->
    <string name="settings_name">إعدادات لوح مفاتيح القرآن الكريم</string>

    <string name="pref_big_keys">تكبير مفاتيح اللوح وحروفه</string>

    <string name="pref_start_shifted">تفعيل البحث عند تشغيل لوح المفاتيح</string>
    <string name="pref_start_shifted_summ">تفعيل زر المصحف عند أول ظهور للوح المفاتيح، لبدأ البحث مباشرة أثناء إدخال الكلمات.</string>

    <string name="pref_aya_begin">نسخ الآية المختارة من أولها</string>
    <string name="pref_aya_begin_summ">نسخ الآية المختارة من أولها إلى آخرها (عدم التفعيل يعني النسخ من أول كلمة البحث إلى آخر الأية).</string>

    <string name="pref_surah_aya_nbrs">إضافة اسم السورة ورقم الآية</string>
    <string name="pref_surah_aya_nbrs_summ">تذييل الآية باسم سورتها ورقمها عند عرضها ونسخها.</string>

    <string name="pref_braces">إحاطة الآية بأقواس</string>
    <string name="pref_braces_summ">وضع الآية أو جزئها بين قوسين ﴿ ﴾ عند نسخها.</string>

    <string name="pref_dot">ختم الآية بنقطة</string>
    <string name="pref_dot_summ">إضافة نقطة \'.\' بعد الآية عند نسخها.</string>


    <string name="pref_quran_rasm_type">رسم النص القرآني</string>
    <string name="pref_quran_rasm_title">نوع الرسم المُستعمل للنص القرآني</string>
    <string name="pref_quran_rasm_type_default">ImlaMashkul</string>

    <string name="pref_search_limit">الحد الأقصى للبحث</string>
    <string name="pref_search_limit_summ">الحد الأقصى لعدد الآيات الموافقة الذي يتوقف بعدها البحث (القيمة 0 تعني البحث في كامل القرآن. هي والقيم الأكبر من 10 قد تجعل البحث بطيئاً).</string>
    <string name="pref_search_limit_default">10</string>


    <string name="pref_about_title">حول البرنامج</string>
<string name="pref_about_summ"><![CDATA[
<html>
<head></head>
<body style="text-align:justify;" dir="rtl" lang="ar">
<h3>تعريف:</h3>

«لوح مفاتيح القرآن الكريم» هو لوح مفاتيح عربي متكامل، أُضيفت إليه خدمة البحث السريع عن آيات الكتاب العزيز ونسخها أثناء الكتابة على أجهزة الأندرويد. هدفه توفير الوقت وصيانة كلام الله
    عن أخطاء النقل التي تحدث بسبب النسيان أو صعوبة إدخال النص يدويا، خصوصاً على شاشات اللمس.
<br/>

<h3>ملاحظة هامة:</h3>
 هذه النسخة من البرنامج تجريبية.
يُرجى التنبيه على أية خطأ، خصوصاً في نص الآيات، بمراسلة المطور على البريد الإلكتروني:
<br/>
<a href="mailto:cdjalel@gmail.com">cdjalel@gmail.com</a>
<br/>

<h3>  رخصة البرنامج:</h3>
    هذا البرنامج مفتوح المصدر تحت رخصة أباتشي 2.0، على هذا
<a href="https://github.com/cdjalel/QuranKeyboard">الرابط</a>
.
<br/>
  يستعمل هذا البرنامج نص القرآن الكريم بالرسم العثماني ورواية حفص، المنشور
في موقع "مُجمّع المصحف الشريف بالمدينة المنورة" (<a href="fonts.qurancomplex.gov.sa/?page_id=42">إصدار 0.09</a>).
<br/>

    ويستعمل الرسم الإملائي (مع و بدون شكل) من موقع (<a href="tanzil.net/download">تنزيل</a>).
 للاستفادة الكاملة من الرسم <strong> العثماني </strong> يجب أن يكون التطبيق الذي يُكتب فيه النص يستعمل هذا الخط.
<br/>
<h3>تنبيه هام:</h3>
    يُرجى التأكد من استعمال النسخة الأصلية من لوح مفاتيح القرآن الكريم،
        أو أية نسخة مشتقة منها، بشرط أن تكون مفتوحة المصدر،
        بحيث يمكن التحقق من خلوها من برامج التجسس على معلومات المستخدم.
</body>
</html>
]]>
</string>

    <string name="pref_help_title">مساعدة المستخدم</string>
<string name="pref_help_summ"><![CDATA[
<html>
<head></head>
<body style="text-align:justify;" dir="rtl" lang="ar">
لاستعمال هذا البرنامج يجب اختياره كطريقة إدخال في إعدادات اللغة (Language&#160;&amp; Input) لنظام الأندرويد.
تفعيل خدمة البحث في القرآن الكريم يتم بالضغط  على زر المصحف (أسفل يسار الشاشة) لتظهر فيه نقطة خضراء.
البحث يقتصر على الحروف التي يتم إدخالها بعد التفعيل، بغض النظر عن ما كُتب قبله.
<br/>
<br/>
يبدأ البحث السريع في المصحف بعد إدخال ثلاث حروف فصاعداً بالرسم الإملائي دون شكل.
ويُستثنى من هاته القاعدة فواتح السور ذات الحرف الواحد أو الحرفين (ص، ق، ن، طه، طس، يس وحم).
يتم عرض حروف البحث ملونةً ضمن الآيات الموافقة لها كاقتراحات فوق شاشة المفاتيح.
تلوين حروف البحث يكون تقريبياًً في الرسم العثماني بسبب اختلاف بعض حروفه عن الرسم الإملائي.
<br/>
<br/>
يُمكن التنقل بين آيات البحث في شريط الاقتراحات بتحريكه أفقيا. وإذا استمر المستخدم في إدخال حروف جديدة،
فإن البرنامج يقوم بتحديث الاقتراحات بسرعة. وعند اختيار إحداها، يتم نسخها مكان حروف البحث.
بعد العثور على الآية المنشودة ونسخها يمكن وقف خدمة البحث بالضغط مجدداً على زر المصحف ليختفي منه الضوء الأخضر.
<br/>
<br/>
الوصول إلى إعدادات البرنامج ممكن من إعدادات النظام (في قسم اللغة)
أو بالضغط الطويل على زر إخفاء لوح المفاتيح (أقصى أسفل يسار الشاشة).
 حسب الإعدادات المختارة، يمكن نسخ الآية كاملة، أو نسخ نصها من كلمة البحث إلى آخرها.
كما يمكن تذييلها باسم سورتها ورقمها. ويمكن اختيار نوع الرسم المستعمل لعرض الآية:
إما عثماني، أو إملائي مع الشكل أو إملائي بدون شكل.
<br/>
<br/>
عند نسخ الرسم العثماني لآية مُعينة إلى خانة الكتابة على الشاشة،
يُشترط كي يظهر النص بشكل صحيح أن يدعم تطبيقها خط القرآن الكريم برواية حفص.
نفس الشرط يلزم عند حفظ الآيات أو إرسالها لتُفتح لاحقاً في تطبيق أو جهاز آخر.
</body>
</html>
]]>
</string>

    <!-- Title of the setup wizard welcome screen. [CHAR LIMT=40] -->
    <string name="setup_welcome_title">"مرحبا بكم مع <xliff:g id="APPLICATION_NAME" example="لوح مفاتيح القرآن الكريم">%s</xliff:g>"</string>
    <!-- Additional title of the setup wizard welcome screen, just below the setup_welcome_title. [CHAR_LIMIT=64] -->
    <string name="setup_welcome_additional_description">مع البحث عن الآيات ونسخها</string>
    <!-- The label of the button that starts the setup wizard. [CHAR_LIMIT=64] -->
    <string name="setup_start_action">البدء</string>
    <!-- The label of the button that navigates the user to the next step of the setup wizard. [CHAR_LIMIT=64] -->
    <string name="setup_next_action">الخطوة التالية</string>
    <!-- Title of the setup wizard. [CHAR LIMT=40] -->
    <string name="setup_steps_title">"إعداد <xliff:g id="APPLICATION_NAME" example="لوح مفاتيح القرآن الكريم">%s</xliff:g>"</string>
    <!-- Ordinal number of the 1st step in the setup wizard. [CHAR LIMIT=5] -->
    <string name="setup_step1_bullet" translatable="false">1</string>
    <!-- Title of the 1st step in the setup wizard. [CHAR LIMIT=64] -->
    <string name="setup_step1_title">"تفيعل <xliff:g id="APPLICATION_NAME" example="لوح مفاتيح القرآن الكريم">%s</xliff:g>"</string>
    <!-- Detailed instruction of the 1st step in the setup wizard. [CHAR LIMIT=120] -->
    <string name="setup_step1_instruction">"فضلا قم بتفعيل \"<xliff:g id="APPLICATION_NAME" example="لوح مفاتيح القرآن الكريم">%s</xliff:g>\" في إعدادات اللغة والإدخال. هذا سيسمح لك بتشغيله على جهازك."</string>
    <!-- Detailed instruction of the already finished 1st step in the setup wizard. [CHAR LIMIT=120] -->
    <string name="setup_step1_finished_instruction">"<xliff:g id="APPLICATION_NAME" example="لوح مفاتيح القرآن الكريم">%s</xliff:g> مُفعّل من قبل في إعدادات اللغة والإدخال، هذه الخطوة تمت. ننتقل إلى الخطوة التالية!"</string>
    <!-- The label of the button that triggers the Languages & input settings in order to enable the keyboard. [CHAR_LIMIT=64] -->
    <string name="setup_step1_action">التفعيل في الإعدادات</string>
    <!-- Ordinal number of the 2nd step in the setup wizard. [CHAR LIMIT=5] -->
    <string name="setup_step2_bullet" translatable="false">2</string>
    <!-- Title of the 2nd step in the setup wizard. [CHAR LIMIT=64] -->
    <string name="setup_step2_title">"اختيار <xliff:g id="APPLICATION_NAME" example="لوح مفاتيح القرآن الكريم">%s</xliff:g>"</string>
    <!-- Detailed instruction of the 2nd step in the setup wizard. [CHAR LIMIT=120] -->
    <string name="setup_step2_instruction">"في ما يلي، اختر \"<xliff:g id="APPLICATION_NAME" example="لوح مفاتيح القرآن الكريم">%s</xliff:g>\" كطريقة لإدخال النص."</string>
    <!-- The label of the button that triggers the choose input method dialog in order to select the keyboard. [CHAR_LIMIT=64] -->
    <string name="setup_step2_action">تبديل طريقة الإدخال</string>
    <!-- Ordinal number of the 3rd step in the setup wizard. [CHAR LIMIT=5] -->
    <string name="setup_step3_bullet" translatable="false">3</string>
    <!-- Title of the 3rd step in the setup wizard. [CHAR LIMIT=64] -->
    <string name="setup_step3_title">"تاهانينا، انتهى الإعداد!"</string>
    <!-- Detailed instruction of the 3rd step in the setup wizard. [CHAR LIMIT=120] -->
    <string name="setup_step3_instruction">يمكن الآن استعمال <xliff:g id="APPLICATION_NAME" example="لوح مفاتيح القرآن الكريم">%s</xliff:g> لإدخال اللغة العربية وللبحث عن الآيات ونسخها.</string>
    <!-- The label of the button that triggers the screen for configuaring additional languages of the keyboard. [CHAR_LIMIT=64] -->
    <string name="setup_step3_action">تهئية إعدادات إضافية</string>
    <!-- The label of the button that finishes the setup wizard. [CHAR_LIMIT=64] -->
    <string name="setup_finish_action">تم</string>
    <!-- Option to show setup wizard icon. [CHAR LIMIT=30]-->
    <string name="show_setup_wizard_icon">إظهار أيقونة التطبيق</string>
    <!-- Description for the option to show setup wizard application icon of this IME in the laucher. [CHAR_LIMIT=65] -->
    <string name="show_setup_wizard_icon_summary">عرض أيقونة التطبيق في واجهة الانطلاق</string>

</resources>
